[SQUASH] Adapt changes to NexOS

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dirtyunicorns.support">
+    package="com.android.settings.custom">
 
     <uses-sdk
         android:minSdkVersion="27" />
